# software-renderer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: continuous.yml
cmake/: SWRDependencies.cmake  SWRDownloadExternal.cmake
cmake/recipes/: stb.cmake  stb_image.cmake
cmake/software_renderer/: software_renderer_warnings.cmake
example/: CMakeLists.txt  render_objs.cpp  render_settings.json
include/swr/: attributes.hpp  float.hpp  render_mesh.hpp
src/: camera.cpp  raster.cpp  render_mesh.cpp  write_png.cpp
